Implement read directory command

--- a/hermes/Makefile
+++ b/hermes/Makefile
@@ -1,6 +1,9 @@
-CC=gcc
+CC=gcc -g -ggdb
 
-agent: main.o commands.o c2_prot.o
+agent:
+	$(CC) -c -o main.o main.c
+	$(CC) -c -o commands.o commands.c
+	$(CC) -c -o c2_prot.o c2_prot.c
 	$(CC) -o agent main.o commands.o c2_prot.o
 
 clean:
