--- a/hermes/Makefile
+++ b/hermes/Makefile
@@ -1,8 +1,10 @@
 CC = gcc
 CFLAGS = -g -ggdb
 
-agent: main.o commands.o c2_prot.o
-	$(CC) $(CFLAGS) -o agent main.o commands.o c2_prot.o
+objects = main.o commands.o c2_prot.o
+
+all: $(objects)
+	$(CC) $(CFLAGS) -o agent $(objects)
 
 clean:
 	rm -f agent *.o
