--- a/hermes/Makefile
+++ b/hermes/Makefile
@@ -1,7 +1,7 @@
-CC = gcc
-CFLAGS = -g -ggdb
+CC := gcc
+CFLAGS += -g -ggdb
 
-objects = main.o commands.o c2_prot.o
+objects := main.o commands.o c2_prot.o
 
 all: $(objects)
 	$(CC) $(CFLAGS) -o agent $(objects)
