--- a/hermes/Makefile
+++ b/hermes/Makefile
@@ -4,7 +4,8 @@ CFLAGS += -g -ggdb
 objects := main.o commands.o c2_prot.o
 
 all: $(objects)
-	$(CC) $(CFLAGS) -o agent $(objects)
+	$(MAKE) -C protocol
+	$(CC) $(CFLAGS) -o agent $(objects) protocol/*.o
 
 clean:
 	rm -f agent *.o
